--- a/src/content/pages/about/you.mdx
+++ b/src/content/pages/about/you.mdx
@@ -7,7 +7,7 @@ Blandit libero volutpat sed cras ornare arcu. Cursus sit amet dictum sit amet. N
 
 ---
 
-<iframe src="https://player.vimeo.com/video/126989174?h=810e6e36d7" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/126989174?h=810e6e36d7" width="640" height="360" frameBorder="0" allow="autoplay; fullscreen; picture-in-picture" allowFullScreen></iframe>
 <p><a href="https://vimeo.com/126989174">Kyoto Japan - Hyper Motion</a> from <a href="https://vimeo.com/osamuhasegawa">Osamu Hasegawa</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 ## Consent
