--- a/src/content/pages/me.mdx
+++ b/src/content/pages/me.mdx
@@ -14,7 +14,7 @@ Felis donec et odio pellentesque diam volutpat commodo sed.
 Tortor consequat id porta nibh. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Scelerisque fermentum dui faucibus in. Tortor posuere ac ut consequat semper viverra.
 
 
-<iframe width="550" height="300" src="https://www.youtube.com/embed/jYV1VDhw7E8" title="I can’t believe this is real" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="550" height="300" src="https://www.youtube.com/embed/jYV1VDhw7E8" title="I can’t believe this is real" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowFullScreen></iframe>
 
 
 
