--- a/src/content/authors/ktroach.mdx
+++ b/src/content/authors/ktroach.mdx
@@ -2,4 +2,5 @@
 title: ktroach
 description: Independent developer/architect
 avatar: /images/avatar/1940742.png
+url: https://github.com/ktroach
 ---
