--- a/src/content/posts/second.mdx
+++ b/src/content/posts/second.mdx
@@ -1,6 +1,7 @@
 ---
 title: Dynamic Routing and Static Regeneration
 description: How to use incremental static regeneration using dynamic routes.
+image: "/images/blog/blog-two.webp"
 date: 2023-03-04
 authors:
   - ktroach
