--- a/src/content/posts/third.mdx
+++ b/src/content/posts/third.mdx
@@ -1,6 +1,7 @@
 ---
 title: Preview Mode for Headless CMS
 description: How to implement preview mode in your headless CMS.
+image: "/images/blog/blog-two.webp"
 date: 2023-04-09
 authors:
   - ktroach
