--- a/src/content/blogs/test-1.mdx
+++ b/src/content/blogs/test-1.mdx
@@ -1,7 +1,7 @@
 ---
 title: Deploying Next.js Apps
 description: How to deploy your Next.js apps on Vercel.
-image: "/images/blog/blog-two.jpg"
+image: "/images/blog/blog-one.jpg"
 date: "2023-07-04"
 authors:
   - ktroach
