--- a/src/content/blogs/test-3.mdx
+++ b/src/content/blogs/test-3.mdx
@@ -1,7 +1,7 @@
 ---
 title: Preview Mode for Headless CMS
 description: How to implement preview mode in your headless CMS.
-image: "/images/blog/blog-two.jpg"
+image: "/images/blog/blog-three.jpg"
 date: 2023-04-09
 authors:
   - ktroach
