--- a/src/content/blogs/cltvi52yk0001htolarkvf1v7/1713669153756ca1.mdx
+++ b/src/content/blogs/cltvi52yk0001htolarkvf1v7/1713669153756ca1.mdx
@@ -1,7 +1,7 @@
 ---
 title: "this will work "
 description: "this is going to work baby lesss gooo"
-image: "doit.png"
+image: "/images/blog/blog-one.jpg"
 date: "2024-04-20"
 authors:
   - ktroach
