--- a/src/content/pages/about/you.mdx
+++ b/src/content/pages/about/you.mdx
@@ -1,6 +1,10 @@
 ---
 title: You
 description: This is about You
+image: "/public/images/blog/blog-one.png"
+date: "2024-04-26"
+authors:
+  - kyleheart7153
 ---
 
 Blandit libero volutpat sed cras ornare arcu. Cursus sit amet dictum sit amet. Nunc vel risus commodo viverra maecenas accumsan. Libero id faucibus nisl tincidunt eget nullam non nisi est. Varius quam quisque id diam vel quam. Id donec ultrices tincidunt arcu non.
