--- a/src/content/blogs/clve0xfo8000712zwqfc64mr3/17144216870912e8.mdx
+++ b/src/content/blogs/clve0xfo8000712zwqfc64mr3/17144216870912e8.mdx
@@ -1,6 +1,6 @@
 ---
-title: "testing new blog 5"
-description: "blog 5"
+title: "test blog 6 "
+description: "give this a shot"
 image: "https://images.unsplash.com/photo-1707779706350-0fdac3993592"
 date: "2024-04-29"
 authors:
@@ -8,3 +8,5 @@ authors:
 ---
 
 Just start typing!
+
+go 
