--- a/src/content/authors/kyleheart7153.mdx
+++ b/src/content/authors/kyleheart7153.mdx
@@ -1,6 +1,6 @@
 ---
-title: "kyleheart7153"
-description: "kyleheart7153"
-avatar: "/images/avatar/1940742.png"
-url: "https://cmnext-8xo7wy5ik-titan-f4a1be16.vercel.app"
+title: kyleheart7153
+description: kyleheart7153
+avatar: /images/avatar/1940742.png
+url: https://cmnext-8xo7wy5ik-titan-f4a1be16.vercel.app
 ---
